<resources>
    <string name="app_name">Social Me</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="add_group">Add Group</string>
    <string name="settings">Settings</string>
    <string name="myposts">My Posts</string>
    <string name="title_activity_group">Group</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="title_activity_post_details">Post Details</string>
    <string name="title_activity_sent_post_details">Sent Post Details</string>
    <string name="title_activity_received_post_details">Received Post Details</string>
    <string name="title_activity_sent_post_list">My Posts</string>

    <string name="tfname">First Name</string>
    <string name="tlname">Last Name</string>
    <string name="tmobile">Mobile Number</string>
    <string name="temail">E-mail Id</string>
    <string name="tDOB">Date of Birth</string>
    <string name="register_button">Register</string>

    <string name="dev1_rol">-Team Lead\n-Developer</string>
    <string name="dev2_rol">-Lead Developer\n-Back End Developer</string>
    <string name="dev3_rol">-Lead Tester\n-Developer</string>
    <string name="dev1_email">suraj@wceacses.org</string>
    <string name="dev2_email">sujata.regoti@gmail.com</string>
    <string name="dev3_email">mrunal_selokar@outlook.com</string>


    <string name="feedback">\n\n\n\n\n-Feedback/Suggestion about Social-Me Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">Dream Team</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity_nav"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Suraj Bobade</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_response_lists">ResponseLists</string>
    <string name="title_activity_response_list">ResponseList</string>
</resources>
