<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.application.sujata.overflowmenu.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:orderInCategory="1"
            android:title="@string/settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/add_group"
            android:orderInCategory="2"
            android:title="@string/add_group"
            app:showAsAction="never" />

        <item
            android:id="@+id/myposts"
            android:orderInCategory="2"
            android:title="@string/myposts"
            app:showAsAction="never" />

    </group>
</menu>