<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tfname"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/tfname"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tlname"
            android:layout_alignStart="@+id/tlname"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlname"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/tfname"
            android:layout_centerHorizontal="true"
            android:hint="@string/tlname" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/tmobile"
            android:layout_gravity="fill_horizontal"
            android:layout_below="@+id/tlname"
            android:layout_centerHorizontal="true"
            android:hint="@string/tmobile"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/temail"
            android:layout_gravity="fill_horizontal"
            android:layout_below="@+id/tmobile"
            android:layout_centerHorizontal="true"
            android:hint="@string/temail"
            android:phoneNumber="false" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/tDOB"
            android:layout_gravity="fill_horizontal"
            android:layout_below="@+id/temail"
            android:layout_centerHorizontal="true"
            android:hint="@string/tDOB" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/button"
            android:layout_gravity="fill_horizontal"
            android:onClick="register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:hint="@string/register_button"
            android:layout_below="@+id/tDOB"/>
</RelativeLayout>
